Fix overflows

--- a/src/styles/canvas.less
+++ b/src/styles/canvas.less
@@ -32,8 +32,7 @@
   //width: @sidebar-width-500;
   max-height: 100%;
   max-width: 30%;
-  overflow-x: hidden;
-  overflow-y: auto;
+  overflow: auto;
   background-color: @blue-400;
   border-left: solid 1px @blue-700;
   padding: @grid-unit * 2;
