--- a/src/styles/sidebar.less
+++ b/src/styles/sidebar.less
@@ -17,6 +17,11 @@
   font-weight: bold;
 }
 
+.sidebar__info-group-value-items {
+  max-height: 350px;
+  overflow-y: auto;
+}
+
 .sidebar__info-group-value-item {
   font-size: 13px;
   padding-left: @grid-unit * 2;
